--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background: #f4f4f4;
+  /* background: #f4f4f4; */
   padding: 40px;
 }
 
@@ -10,7 +10,7 @@ body {
   background: white;
   padding: 30px;
   border-radius: 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
 }
 
 h1 {
@@ -21,7 +21,7 @@ h1 {
 /* Progress Bar */
 .progress-bar {
   width: 100%;
-  background-color: #e0e0e0;
+  background-color: #e0e0e01c;
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 30px;
