--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 body {
   font-family: Arial, sans-serif;
-  /* background: #f4f4f4; */
+  background: #fff;
   padding: 40px;
 }
 
 .container {
-  max-width: 700px;
+  max-width: 900px;
   margin: auto;
-  background: white;
+  /* background: white; */
   padding: 30px;
-  border-radius: 20px;
+  /* border-radius: 20px;/+ */
   /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
 }
 
 h1 {
   text-align: center;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 /* Progress Bar */
@@ -33,7 +33,7 @@ h1 {
   height: 100%;
   width: 0%;
   background-color: #007bff;
-  transition: width 0.3s ease-in-out;
+  transition: width 0.5s ease-in-out;
 }
 
 /* Question & Options */
@@ -48,12 +48,12 @@ h1 {
 
 .options label {
   display: block;
-  margin: 8px 0;
-  background: #f9f9f9;
+  margin: 15px 20px;
+  /* background: #f9f9f9; */
   padding: 8px 12px;
-  border-radius: 8px;
+  border-radius: 12px;
   cursor: pointer;
-  transition: background 0.2s;
+  transition: background 0.5s;
 }
 
 .options label:hover {
@@ -68,10 +68,10 @@ h1 {
   padding: 10px 25px;
   font-size: 16px;
   border: none;
-  border-radius: 8px;
+  border-radius: 10px;
   cursor: pointer;
-  transition: background 0.3s ease;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: background 0.5s ease;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.4);
 }
 
 .submit-btn {
