--- a/style.css
+++ b/style.css
@@ -101,3 +101,20 @@ h1 {
   margin-top: 25px;
   font-size: 20px;
 }
+/* Start Screen */
+.start-screen {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.start-screen h1 {
+  margin-bottom: 30px;
+}
+
+.timer {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: right;
+  margin-bottom: 10px;
+  color: #d9534f;
+}
