--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Roboto, serif;
   background: #fff;
   padding: 40px;
   margin: 0;
@@ -119,13 +119,26 @@ h1 {
   transform: rotateY(180deg);
 }
 
-.card-front,
-.card-back {
+.card-front{
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 20px;
+  border-radius: 12px;
+}
+
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   font-size: 18px;
@@ -207,4 +220,11 @@ h1 {
   .options-grid {
     grid-template-columns: repeat(2, 1fr); /* Keep two columns for medium-sized screens */
   }
+}
+/* Add this to your existing CSS */
+.card-back .explanation {
+  /* font-size: 0.8em; */
+  margin-top: 20px;
+  color: #555; /* Adjust color as needed */
+  /* text-align: left; */
 }
